# live-clip-agent

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  live_clip_agent.py
backend/app/api/: deps.py
backend/app/chains/: __init__.py  candidate_detection.py  clip_scoring.py  publish_copy.py  risk_review.py  schemas.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/db/: __init__.py  init_sql.py
backend/app/jobs/: __init__.py  pipeline.py  queues.py  worker.py
backend/app/models/: tables.py
backend/app/schemas/: video_ops.py
backend/app/services/: __init__.py  agent_pipeline.py  clip_detection.py  exporter.py  ffmpeg_runtime.py  queue.py  risk_rules.py  storage.py  tasks.py  transcription.py
backend/app/tools/: __init__.py  candidate_detection_tool.py  clip_scoring_tool.py  export_clip_video_tool.py  publish_copy_tool.py  risk_review_tool.py  save_clip_tool.py  transcription_tool.py
backend/scripts/: create_database.sql  run_worker.py  seed_demo_data.py
backend/tests/: test_clip_cover_text.py  test_clip_delete.py  test_clip_detection.py  test_clip_export.py  test_clip_source_video.py  test_cors.py  test_database_init_sql.py  test_export_clip_video_tool.py  test_exporter.py  test_ffmpeg_runtime.py  test_job_retry_and_delete.py  test_langchain_fallback.py  test_live_clip_agent.py  test_publish_plans_api.py  test_risk_review.py  test_rq_worker.py  test_transcription_service.py  test_video_delete.py  test_video_upload.py
(+26 files in other folders)
