[project]
name = "live-stream-clip-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the live stream clip agent portfolio project."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "ffmpeg-python>=0.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "openai>=1.40.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "sqlalchemy>=2.0.0",
  "structlog>=24.1.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
